# ekishouTV.github.io

./: .gitignore  404.html  Dockerfile  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
blog/: index.html
blog/2024/12/08/renderingobsidianautocardlink/: index.html
blog/2024/12/10/買ってよかったもの-2024/: index.html
blog/2025/03/02/ubuntuのsystem-applicationにthemeを適用する/: index.html
blog/2025/11/24/migrated-from-rye-to-uv/: index.html
blog/2025/12/06/best-buy-2025/: index.html
blog/archive/2024/: index.html
blog/archive/2025/: index.html
docs/: index.md
docs/blog/posts/: best-buy-2024.md  best-buy-2025.md  how-to-apply-theme-to-system-application-on-ubuntu.md  migrated-from-rye-to-uv.md  test.md
docs/stylesheets/: rendering_obsidian_auto_card_link.css
search/: search_index.json
stylesheets/: rendering_obsidian_auto_card_link.css
