[project]
name = "site"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "mkdocs-material[imaging]>=9.6.8",
    "mkdocs-roamlinks-plugin>=0.3.2",
    "mkdocs-rendering-obsidian-auto-card-link @ git+https://github.com/ekishouTV/mkdocs-rendering-obsidian-auto-card-link@v0.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
